Working code/documents

--- a/src/components/layout/navbar-items.module.css
+++ b/src/components/layout/navbar-items.module.css
@@ -1,5 +1,5 @@
 .hover {
     &:hover {
-        background-color: var(--mantine-color-blue-7)
+        background-color: var(--mantine-color-blue-7);
     }
 }
