let already selected items stay active

--- a/src/components/layout/navbar-items.module.css
+++ b/src/components/layout/navbar-items.module.css
@@ -1,5 +1,10 @@
+.active,
 .hover {
     &:hover {
-        background-color: var(--mantine-color-blue-7);
+        background-color: var(--mantine-color-blue-6);
     }
+}
+
+.active {
+    background-color: var(--mantine-color-blue-7);
 }
