Addressed first half of OTTO-171. Added entry point at bottom of nav panel, created user profile component with test. new style for onHover on this section

--- a/src/components/layout/navbar-items.module.css
+++ b/src/components/layout/navbar-items.module.css
@@ -1,3 +1,7 @@
 .navLinkHover:hover {
     background-color: var(--mantine-color-blue-9);
 }
+
+.navLinkProfileHover:hover {
+    background-color: var(--mantine-color-blue-8);
+}
